# Kokao-Engine-v2.5-Hybrid-

./: ARCHITECTURE.md  ARCHIVE_READY.md  CHANGELOG.md  LICENSE  MANIFEST.in  PUBLISH_GUIDE.md  README.md  README_GITHUB.md  README_PYPI.md  RELEASE_CHECKLIST.md  RELEASE_NOTES.md  RELEASE_NOTES_RU.md  VERSION_VERIFIED.md  compare_cores.py  pyproject.toml  quick_test.py  requirements.txt
benchmarks/: benchmark_methods.py  benchmark_results.csv
examples/: demo.py
kokao/: __init__.py  abstraction.py  agentic.py  amp.py  attention.py  base.py  cache.py  cli.py  config.py  core.py  core_base.py  cuda_graphs.py  decoder.py  distributed.py  etalon.py  export.py  fantasy.py  federated.py  generative.py  gnn.py  goal_system.py  guidance.py  homomorphic.py  inverse.py  math_exact.py  mental_states.py  metrics.py  mlflow_logging.py  normal_etalon.py  onnx_runtime.py  penetration_testing.py  poetic_chain.py  privacy.py  profiler.py  quantization.py  quantum.py  rag.py  robustness.py  secure.py  snn.py  (+4 more)
kokao/experimental/: __init__.py  topological.py
kokao/experimental/physical/: __init__.py  constants.py  core.py  inverse.py  isospin.py  lorentz.py  quantization.py  solitonic.py
kokao/integrations/: huggingface.py  langchain.py
kokao/kokao_hub/: __init__.py  api.py
tests/: conftest.py  test_abstraction.py  test_attention.py  test_benchmark.py  test_cli.py  test_core.py  test_decoder.py  test_etalon.py  test_fantasy.py  test_goal_system.py  test_guidance.py  test_huggingface.py  test_infrastructure.py  test_inverse.py  test_inverse_accuracy.py  test_langchain.py  test_math_exact.py  test_mental_states.py  test_normal_etalon.py  test_parameterized.py  test_performance_modules.py  test_poetic_chain.py  test_rag.py  test_robustness.py  test_secure.py  test_xai.py
tests/test_core/: test_advanced.py  test_initialization.py  test_signal.py  test_signal_edge_cases.py  test_train.py  test_training_edge_cases.py  test_weight_init.py
tests/test_e2e/: test_decision_e2e.py  test_pattern_recognition.py
tests/test_etalon/: test_recognition.py
tests/test_experimental/: test_compare_methods.py  test_topological.py
tests/test_experimental/physical/: test_constants.py  test_isospin.py  test_physical_core.py  test_physical_inverse.py  test_quantization.py  test_solitonic.py
tests/test_integration/: test_decision_integration.py  test_rag_core.py  test_train_invert.py
tests/test_inverse/: test_analytical.py  test_multi_restart.py
tests/test_stress/: test_memory.py  test_numerical.py
tests/test_system/: test_learning_pipeline.py  test_multi_module.py  test_performance_regression.py
